# hardware-spec-kit

./: README.md  pyproject.toml
memory/: constitution.md
src/specify_cli/: __init__.py
