[project]
name = "hardware-specify-cli"
version = "0.1.3"
description = "Hardware Specify CLI - Setup tool for hardware spec-driven development projects (fork of github/spec-kit)"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
